2024-01-12 JTC: Fixes the Amount input's length in the DApp's Wrap page.

--- a/public/css/dapp-delegate.css
+++ b/public/css/dapp-delegate.css
@@ -21,8 +21,13 @@
     white-space: nowrap;
 }
 
-.amount {
+.amount-delegate {
+    border: none;
     width: 12% !important;
+    margin-top: 20px;
+    font-size: 2.4rem;
+    padding-bottom: 10px;
+    background: none !important;
 }
 
 .delegate-button-text {
