--- a/public/css/dapp-main.css
+++ b/public/css/dapp-main.css
@@ -312,12 +312,11 @@ h1, h2 {
 
 .amount {
     border: none;
-    width: 50%;
+    width: 60%;
     margin-top: 20px;
     font-size: 2.4rem;
     padding-bottom: 10px;
     background: none !important;
-
 }
 
 .amount:focus {
